--- a/WEBP4/WEBP4/Views/Abonos/RegistrarAbonos.cshtml
+++ b/WEBP4/WEBP4/Views/Abonos/RegistrarAbonos.cshtml
@@ -1,4 +1,4 @@
-﻿@model WEBP4.Entities.PrincipalEnt
+﻿﻿@model WEBP4.Entities.AbonosEnt
 
 @{
     ViewBag.Title = "RegistrarAbonos";
@@ -17,27 +17,21 @@
                 </div>
             }
 
-            @using (Html.BeginForm("ConsultarProductos", "Principal", FormMethod.Post, new { @class = "pt-3" }))
+            @using (Html.BeginForm("ConsultarProductos", "Abonos", FormMethod.Post, new { @class = "pt-3" }))
             {
 
                 @Html.HiddenFor(m => m.Id_Compra)
 
                 <div class="form-group">
                     <label>Compra</label>
-                    @if (ViewBag.Productos != null && ViewBag.Productos is List<SelectListItem>)
-                    {
-                        @Html.DropDownListFor(m => m.Id_Compra, ViewBag.Productos as List<SelectListItem>, new { @class = "form-control form-control-lg", @type = "text", @placeholder = "Productos" })
-                    }
-                    else
-                    {
-                        <p>Error: No se pudo cargar la lista de productos.</p>
-                    }
+                    @Html.DropDownListFor(m => m.Descripcion, ViewBag.Productos as List<SelectListItem>, new { @class = "form-control form-control-lg", @type = "text", @placeholder = "Productos" })
                 </div>
 
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Saldo Anterior</label>
-                    @Html.TextBoxFor(m => m.Saldo, new { @readonly = "@readonly", style = "background-color:#eeeeee", @class = "form-control form-control-lg", @type = "text", placeholder = "Saldo" })
-                </div>
+
+                @*<div class="form-group">
+                <label for="exampleInputName1">Identificación</label>
+                @Html.TextBoxFor(m => m.Saldo, new { @onkeyup = "ConsultarSaldos()", @class = "form-control form-control-lg", @type = "text", placeholder = "Saldo Anterior" })
+            </div>*@
 
                 <button type="submit" class="btn btn-primary mr-2">Abonar</button>
             }
@@ -45,3 +39,4 @@
         </div>
     </div>
 </div>
+@*<script src="~/Funciones/ConsultarSaldosApi.js"></script>*@
