Cambios al formulario

--- a/WEBP4/WEBP4/Views/Abonos/RegistrarAbonos.cshtml
+++ b/WEBP4/WEBP4/Views/Abonos/RegistrarAbonos.cshtml
@@ -4,39 +4,52 @@
     ViewBag.Title = "RegistrarAbonos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div style="display: flex; justify-content:center;">
+    <div class="col-6 grid-margin stretch-card" style="text-align:center; margin-bottom:20px;">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Información General</h4>
 
-<div class="col-12 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Información General</h4>
+                @if (ViewBag.MensajeUsuario != null)
+                {
+                    <div class="alert alert-info" role="alert" style="text-align:center">
+                        @ViewBag.MensajeUsuario
+                    </div>
+                }
 
-            @if (ViewBag.MensajeUsuario != null)
-            {
-                <div class="alert alert-info" role="alert" style="text-align:center">
-                    @ViewBag.MensajeUsuario
-                </div>
-            }
+                @using (Html.BeginForm("RegistrarAbonos", "Abonos", FormMethod.Post, new { @class = "pt-3" }))
+                {
+                    <div>
+                        @Html.HiddenFor(m => m.Id_Compra)
 
-            @using (Html.BeginForm("ConsultarProductos", "Abonos", FormMethod.Post, new { @class = "pt-3" }))
-            {
-
-                @Html.HiddenFor(m => m.Id_Compra)
-
-                <div class="form-group">
-                    <label>Compra</label>
-                    @Html.DropDownListFor(m => m.Descripcion, ViewBag.Productos as List<SelectListItem>, new { @class = "form-control form-control-lg", @type = "text", @placeholder = "Productos" })
-                </div>
+                        <div class="form-group">
+                            <label>Compra</label>
+                            @Html.DropDownListFor(m => m.Descripcion, ViewBag.Productos as List<SelectListItem>, new { @class = "form-control form-control-lg", @type = "text", @placeholder = "Productos" })
+                        </div>
 
 
-                @*<div class="form-group">
-                <label for="exampleInputName1">Identificación</label>
-                @Html.TextBoxFor(m => m.Saldo, new { @onkeyup = "ConsultarSaldos()", @class = "form-control form-control-lg", @type = "text", placeholder = "Saldo Anterior" })
-            </div>*@
+                        @*<div class="form-group">
+                                <label for="exampleInputName1">Identificación</label>
+                                @Html.TextBoxFor(m => m.Saldo, new { @onkeyup = "ConsultarSaldos()", @class = "form-control form-control-lg", @type = "text", placeholder = "Saldo Anterior" })
+                            </div>*@
 
-                <button type="submit" class="btn btn-primary mr-2">Abonar</button>
-            }
+                        <div class="form-group">
+                            <label>Saldo</label>
+                            @Html.TextBoxFor(m => m.Saldo, new { @class = "form-control form-control-lg", @type = "text", @placeholder = "Saldo"})
+                        </div>
 
+                        <div class="form-group">
+                            <label>Abono</label>
+                            @Html.TextBoxFor(m => m.Monto, new { @class = "form-control form-control-lg", @type = "text", placeholder = "Indique el monto a abonar" })
+                        </div>
+
+                        <button type="submit" class="btn btn-secondary mr-2">Abonar</button>
+                    </div>
+                }
+
+            </div>
         </div>
     </div>
 </div>
+
 @*<script src="~/Funciones/ConsultarSaldosApi.js"></script>*@
