--- a/WEBP4/WEBP4/Views/Shared/_Layout.cshtml
+++ b/WEBP4/WEBP4/Views/Shared/_Layout.cshtml
@@ -149,6 +149,7 @@
     <script src="vendors/jquery.ajaxchimp.min.js"></script>
     <script src="vendors/mail-script.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
 
 </body>
 </html>
