--- a/WEBP4/WEBP4/Views/Abonos/RegistrarAbonos.cshtml
+++ b/WEBP4/WEBP4/Views/Abonos/RegistrarAbonos.cshtml
@@ -17,39 +17,60 @@
                     </div>
                 }
 
+                @*@using (Html.BeginForm("RegistrarAbonos", "Abonos", FormMethod.Post, new { @class = "pt-3" }))
+        {
+            <div>
+                @Html.HiddenFor(m => m.Id_Compra)
+
+                <div class="form-group">
+                    <label>Compra</label>
+                    @Html.DropDownListFor(m => m.Descripcion, ViewBag.Productos as List<SelectListItem>, new { @class = "form-control form-control-lg", @type = "text", @placeholder = "Productos", @id = "ProductosDropdown" })
+                </div>
+
+                <div class="form-group">
+                    <label>Saldo</label>
+                    @Html.TextBoxFor(m => m.Saldo, new { @readonly = "readonly", @class = "form-control form-control-lg", @type = "text", @placeholder = "Saldo", @id = "Saldo" })
+                </div>
+
+                <div class="form-group">
+                    <label>Abono</label>
+                    @Html.TextBoxFor(m => m.Monto, new { @class = "form-control form-control-lg", @type = "text", placeholder = "Indique el monto a abonar" })
+                </div>
+
+                <button type="submit" class="btn btn-secondary mr-2">Abonar</button>
+            </div>
+        }*@
+
                 @using (Html.BeginForm("RegistrarAbonos", "Abonos", FormMethod.Post, new { @class = "pt-3" }))
                 {
-                    <div>
-                        @Html.HiddenFor(m => m.Id_Compra)
-
-                        <div class="form-group">
-                            <label>Compra</label>
-                            @Html.DropDownListFor(m => m.Descripcion, ViewBag.Productos as List<SelectListItem>, new { @class = "form-control form-control-lg", @type = "text", @placeholder = "Productos" })
+                    <div class="form-group">
+                        <label>Compra</label>
+                        <div class="row">
+                            <div class="col-11">
+                                @Html.DropDownListFor(m => m.Id_Compra, Model.Productos, new { @class = "form-control form-control-lg", @id = "ProductosDropdown" })
+                            </div>
+                            <div class="col-1">
+                                <button type="submit" name="submitButton" value="Ver">Ver</button>
+                            </div>
                         </div>
-
-
-                        @*<div class="form-group">
-                                <label for="exampleInputName1">Identificación</label>
-                                @Html.TextBoxFor(m => m.Saldo, new { @onkeyup = "ConsultarSaldos()", @class = "form-control form-control-lg", @type = "text", placeholder = "Saldo Anterior" })
-                            </div>*@
-
-                        <div class="form-group">
-                            <label>Saldo</label>
-                            @Html.TextBoxFor(m => m.Saldo, new { @class = "form-control form-control-lg", @type = "text", @placeholder = "Saldo"})
-                        </div>
-
-                        <div class="form-group">
-                            <label>Abono</label>
-                            @Html.TextBoxFor(m => m.Monto, new { @class = "form-control form-control-lg", @type = "text", placeholder = "Indique el monto a abonar" })
-                        </div>
-
-                        <button type="submit" class="btn btn-secondary mr-2">Abonar</button>
                     </div>
+
+                    <div class="form-group">
+                        <label>Saldo</label>
+                        @Html.TextBoxFor(m => m.principal.Saldo, new { @readonly = "readonly", @class = "form-control form-control-lg", @type = "text", @placeholder = "Saldo disponible", @id = "Saldo" })
+                    </div>
+
+                    @Html.HiddenFor(m => m.Id_Compra)
+
+                    <div class="form-group">
+                        <label>Abono</label>
+                        @Html.TextBoxFor(m => m.Monto, new { @class = "form-control form-control-lg", @type = "text", placeholder = "Indique el monto a abonar" })
+                    </div>
+
+                    <button type="submit" class="btn btn-secondary mr-2">Abonar</button>
                 }
 
             </div>
         </div>
     </div>
 </div>
-
-@*<script src="~/Funciones/ConsultarSaldosApi.js"></script>*@
