--- a/WEBP4/WEBP4/Views/Shared/_Layout.cshtml
+++ b/WEBP4/WEBP4/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         <ul class="nav navbar-nav menu_nav ml-auto mr-auto">
                             <li class="nav-item active"><a class="nav-link" href="@Url.Action("Index", "Home")">Inicio</a></li>
                             <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                                    aria-expanded="false">Opciones</a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item"><a href="@Url.Action("ConsultarPrincipal", "Principal")" class=" nav-link">Consultar</a></li>
